[gd_scene load_steps=10 format=2]

[ext_resource path="res://Art/Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Screens/ChangeScreen.gd" type="Script" id=2]
[ext_resource path="res://Art/Sprites/Sprite_DisagreeLot.png" type="Texture" id=3]
[ext_resource path="res://Art/Sprites/Sprite_ButtonStartTrade.png" type="Texture" id=4]
[ext_resource path="res://Art/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.14902, 0.145098, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.27451, 0.27451, 0.27451, 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="ChangeScreen" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="PlayerListPanel" type="Panel" parent="."]
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = 435.0
margin_bottom = -70.0
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerListPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CardsListPanel" type="Panel" parent="."]
anchor_bottom = 1.0
margin_left = 470.0
margin_top = 50.0
margin_right = 970.0
margin_bottom = -70.0
custom_styles/panel = SubResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="CardsListPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="CardsListPanel/ScrollContainer"]
columns = 2

[node name="YourChoicedCardPanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -272.551
margin_top = 88.0
margin_right = -42.5522
margin_bottom = 338.0
custom_styles/panel = SubResource( 2 )

[node name="OpponentChoicedCardPanel2" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -272.551
margin_top = -320.727
margin_right = -42.5522
margin_bottom = -70.7263
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -274.0
margin_top = 50.0
margin_right = -45.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.811765, 0.8, 0.8, 1 )
custom_fonts/font = SubResource( 3 )
text = "Вы предлагаете"
align = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -274.0
margin_top = 350.0
margin_right = -45.0
margin_bottom = 386.0
custom_colors/font_color = Color( 0.811765, 0.8, 0.8, 1 )
custom_fonts/font = SubResource( 3 )
text = "Вы получаете"
align = 1

[node name="ButtonStartBackrgound" type="TextureRect" parent="."]
margin_left = 824.0
margin_top = 661.0
margin_right = 974.0
margin_bottom = 712.0
texture = ExtResource( 4 )

[node name="ButtonStartTrade" type="Button" parent="ButtonStartBackrgound"]
margin_right = 150.0
margin_bottom = 51.0
rect_min_size = Vector2( 150, 51 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.972549, 0, 0.0313726, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Предложить"
flat = true

[node name="ButtonMakeBackrgound2" type="TextureRect" parent="."]
margin_left = 1006.0
margin_top = 661.0
margin_right = 1156.0
margin_bottom = 712.0
texture = ExtResource( 4 )

[node name="ButtonMakeTrade" type="Button" parent="ButtonMakeBackrgound2"]
rect_min_size = Vector2( 150, 51 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.972549, 0, 0.0313726, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Обменять"
flat = true

[node name="IndicatorTrading" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -538.0
margin_top = -59.0
margin_right = -490.0
margin_bottom = -11.0
texture = ExtResource( 3 )

[connection signal="pressed" from="ButtonStartBackrgound/ButtonStartTrade" to="." method="_on_ButtonStartTrade_pressed"]
[connection signal="pressed" from="ButtonMakeBackrgound2/ButtonMakeTrade" to="." method="_on_ButtonMakeTrade_pressed"]
